# project-starter-graphql

./: .editorconfig  .env.e2e  .env.template  .env.test  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  Makefile  README.md  compose.e2e.yaml  compose.test.yaml  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-backend.yaml  build-frontend.yaml  build-image.yaml  build-proxy.yaml  build-push-image.yaml  deploy.yaml  lint.yaml  preview-infrastructure.yaml  promote-images.yaml  purge-cache.yaml  push-images.yaml  run-e2e-tests.yaml  scan-image.yaml  test-backend.yaml  test-frontend.yaml  test-image.yaml  test-proxy.yaml  test.yaml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 31b17b043ee3_init_tables.py  4a50a0932f83_init_tables.py  659f3ca45af0_init_tables.py  70354f8a2bd9_init_tables.py  737262360886_init_tables.py  d0f6fed555bf_init_tables.py
backend/app/: pyproject.toml  run.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: a2dca05cbc34_init_tables.py
backend/app/src/alembic/: env.py
backend/app/src/celery/: app.py
backend/app/src/config/: db.py  settings.py
backend/app/src/models/: user.py
backend/app/src/tests/: test_main.py
backend/backend/: celery.py  db.py  i18.py  logs.py  main.py  models.py  worker.py
backend/backend/api/: deps.py
backend/backend/api/graphql/: api.py  context.py  mutation.py  query.py  router.py
backend/backend/api/graphql/resolvers/: user.py
backend/backend/api/graphql/types/: error.py  user.py  validation.py
backend/backend/api/rest/: router.py
backend/backend/celery/: app.py
backend/backend/config/: app.py  celery.py  db.py  email.py  monitoring.py  settings.py  user.py  worker.py
backend/backend/crud/: base.py
backend/backend/db/: __init__.py  engine.py  session.py
backend/backend/libs/api/: context.py  headers.py  types.py
backend/backend/libs/db/: crud.py  engine.py  functions.py  session.py
backend/backend/libs/email/: message.py
backend/backend/libs/security/: password.py  token.py
backend/backend/libs/templates/: env.py
backend/backend/libs/types/: asynchronous.py  dataclass.py  scalars.py  unset.py
backend/backend/locales/: base.pot
backend/backend/models/: __init__.py  functions.py  user.py
backend/backend/services/: user.py
backend/backend/services/monitoring/: exceptions.py  tasks.py
backend/backend/services/monitoring/operations/: health.py
backend/backend/services/monitoring/routers/: health.py  router.py
backend/backend/services/user/: context.py  controllers.py  crud.py  exceptions.py  jinja.py  models.py  resolvers.py  schemas.py  tasks.py  tmp_controllers.py  types.py
backend/backend/services/user/controllers/: auth.py  email.py  token.py  user.py
backend/backend/services/user/operations/: auth.py  email.py  password.py  types.py  user.py
backend/backend/services/user/resolvers/: auth.py  email.py  password.py  user.py
backend/backend/services/user/templates/: email-confirmation.html  reset-password.html
backend/backend/services/user/types/: auth.py  email.py  password.py  user.py
backend/backend/types/: dataclass.py  user.py
backend/tests/: conftest.py  test_main.py
backend/tests/integration/: conftest.py  test_main.py
backend/tests/integration/api/: test_app.py
backend/tests/integration/api/graphql/: test_router.py  test_schema.py
backend/tests/integration/api/graphql/resolvers/: test_user.py
backend/tests/integration/crud/: test_base.py
backend/tests/integration/helpers/: db.py  user.py
backend/tests/integration/libs/db/: test_crud.py
backend/tests/integration/services/monitoring/routers/: test_health.py
backend/tests/integration/services/user/: test_resolvers.py
backend/tests/integration/services/user/resolvers/: test_auth.py  test_email.py  test_password.py  test_user.py
backend/tests/unit/api/: test_deps.py
backend/tests/unit/api/graphql/types/: test_validation.py
backend/tests/unit/helpers/: async_executor.py  user.py
backend/tests/unit/libs/api/: test_headers.py  test_types.py
backend/tests/unit/libs/db/: test_crud.py
backend/tests/unit/libs/email/: test_message.py
backend/tests/unit/libs/security/: test_password.py  test_token.py
backend/tests/unit/libs/types/: test_scalars.py  test_unset.py
backend/tests/unit/services/: test_user.py
backend/tests/unit/services/monitoring/operations/: test_health.py
backend/tests/unit/services/user/: test_controllers.py  test_schemas.py  test_tmp_controllers.py
backend/tests/unit/services/user/controllers/: test_auth.py  test_email.py  test_password.py  test_token.py  test_user.py
backend/tests/unit/services/user/operations/: test_auth.py  test_email.py  test_password.py  test_user.py
backend/tests/unit/services/user/templates/: test_email_confirmation.py  test_reset_password.py
backend/tests/unit/stubs/crud/: base.py
backend/tests/unit/types/: test_scalars.py
e2e/: .dockerignore  .eslintrc.cjs  .gitignore  .yarnrc.yml  Dockerfile  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: home.test.ts
frontend/: .dockerignore  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.js  .yarnrc.yml  Dockerfile  README.md  codegen.ts  nginx.conf  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend-old/: .eslintrc.json  package.json
frontend-old/src/: app.tsx
frontend/app/: .eslintrc.json  package.json
frontend/src/: dummy.test.ts  entry.dev.tsx  entry.node-server.tsx  entry.ssr.tsx  global.css  root.tsx  speak-config.ts  speak-functions.ts
infrastructure/: Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  requirements.txt
infrastructure/helpers/: date.py  hash.py  string.py
infrastructure/modules/: __init__.py  alb.py  ecr.py  ecs.py  elasticache.py  iam.py  network.py  rds.py  ssm.py
infrastructure/resources/: alb.py  cache.py  database.py  ecr.py  ecs.py  (+8 more)
proxy/: .dockerignore  Dockerfile  nginx-template-subst.sh  nginx.conf
(+252 files in other folders)
