[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend"
authors = ["Przemek Kanach <kanach16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
celery = "^5.3.0"
fastapi = "^0.97.0"
orjson = "^3.9.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^1.10.9"}
redis = "^4.5.5"
sqlalchemy = "^2.0.16"
strawberry-graphql = {extras = ["fastapi"], version = "^0.186.1"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
anyio = "^3.7.0"
flower = "^1.2.0"
httpx = "^0.24.1"
mypy = "^1.3.0"
pylint = "^2.17.4"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
types-passlib = "^1.7.7.12"

[tool.mypy]
ignore_missing_imports = true
strict = true
show_column_numbers = true
plugins = [
    "pydantic.mypy",
    "strawberry.ext.mypy_plugin"
]

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.BASIC]
good-names = [
    "id"
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "duplicate-code",
    "fixme",
    "missing-docstring",
    "too-few-public-methods",
    "too-many-instance-attributes"
]
enable = [
    "useless-suppression"
]
extension-pkg-whitelist = [
    "orjson",
    "pydantic"
]

[tool.pytest.ini_options]
addopts = [
    "--cov=backend",
    "--strict-config",
    "--strict-markers"
]
xfail_strict = true

[tool.coverage.report]
omit = [
   "*/__init__.py"
]
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING:"
]
show_missing = true
