[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend"
authors = ["Przemek Kanach <kanach16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
celery = "^5.3.4"
fastapi = "^0.103.0"
jinja2 = "^3.1.2"
orjson = "^3.9.7"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pydantic = { extras = ["email"], version = "^2.3.0" }
pydantic-settings = "^2.0.3"
pyseto = "^1.7.3"
redis = "^5.0.0"
sqlalchemy = "^2.0.20"
strawberry-graphql = { extras = ["fastapi"], version = "^0.208.0" }
uvicorn = { extras = ["standard"], version = "^0.23.2" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
anyio = "^4.0.0"
flower = "^2.0.1"
httpx = "^0.25.0"
mypy = "^1.5.1"
pylint = "^2.17.5"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
types-passlib = "^1.7.7.13"

[tool.mypy]
ignore_missing_imports = true
strict = true
plugins = ["pydantic.mypy", "strawberry.ext.mypy_plugin"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.BASIC]
good-names = ["id"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "duplicate-code",
    "fixme",
    "missing-docstring",
    "too-few-public-methods",
    "too-many-instance-attributes",
]
enable = ["useless-suppression"]
extension-pkg-whitelist = ["orjson", "pydantic"]

[tool.pytest.ini_options]
addopts = ["--cov=backend", "--strict-config", "--strict-markers"]
xfail_strict = true

[tool.coverage.run]
# Fixes the problem with missing coverage lines after await
# https://github.com/nedbat/coveragepy/issues/1082
concurrency = ["greenlet"]

[tool.coverage.report]
omit = ["*/__init__.py"]
exclude_lines = ["pragma: no cover", "if typing.TYPE_CHECKING:"]
show_missing = true
