[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend"
authors = ["Przemek Kanach <kanach16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
celery = "^5.3.6"
fastapi = "^0.104.1"
jinja2 = "^3.1.2"
orjson = "^3.9.10"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pydantic = { extras = ["email"], version = "^2.5.2" }
pydantic-settings = "^2.1.0"
pyseto = "^1.7.7"
redis = "^5.0.1"
sqlalchemy = "^2.0.23"
strawberry-graphql = { extras = ["fastapi"], version = "^0.213.0" }
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
anyio = "^3.7.1"
flower = "^2.0.1"
httpx = "^0.25.2"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
types-passlib = "^1.7.7.13"

[tool.mypy]
ignore_missing_imports = true
strict = true
plugins = ["pydantic.mypy", "strawberry.ext.mypy_plugin"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = ["--cov=backend", "--strict-config", "--strict-markers"]
xfail_strict = true

[tool.coverage.run]
# Fixes the problem with missing coverage lines after await
# https://github.com/nedbat/coveragepy/issues/1082
concurrency = ["greenlet"]

[tool.coverage.report]
omit = ["*/__init__.py"]
exclude_lines = ["pragma: no cover", "if typing.TYPE_CHECKING:"]
show_missing = true
