[tool.poetry]
name = "project-starter-graphql"
version = "0.1.0"
description = "Project Starter GraphQL"
authors = ["Przemek Kanach <kanach16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[tool.poetry.group.test.dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.3.1"
httpx = "^0.24.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "B",   # flake8-bugbear
    "C90", # mccabe
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "T20", # flake8-print
    "W",   # pycodestyle warnings
]
ignore = [
    "B008", # do not perform function call in argument defaults
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic method
    "D106", # missing docstring in public nested class
    "D107", # missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D212", # multi-line docstring summary should start at the first line
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401" # imported but unused
]

[tool.mypy]
ignore_missing_imports = true
strict = true
show_column_numbers = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = [
    "fixme",
    "missing-docstring",
    "too-few-public-methods"
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--strict-config",
    "--strict-markers"
]
xfail_strict = true

[tool.coverage.report]
omit = [
   "*/tests/*",
   "*/__init__.py",
]
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING:"
]
fail_under = 100
show_missing = true

[tool.bandit]
exclude_dirs = [
    "tests"
]
