[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "project-starter-graphql"
version = "0.1.0"
description = "Project Starter GraphQL"
authors = ["Przemek Kanach <kanach16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.3.1"
httpx = "^0.24.1"
mypy = "^1.3.0"
pylint = "^2.17.4"

[tool.isort]
profile = "black"
known_first_party = "src"

[tool.mypy]
ignore_missing_imports = true
strict = true
show_column_numbers = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = [
    "fixme",
    "missing-docstring"
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--strict-config",
    "--strict-markers"
]
xfail_strict = true

[tool.coverage.report]
omit = [
   "*/tests/*",
   "*/__init__.py",
]
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING:"
]
fail_under = 100
show_missing = true
